# GolfMembersManager

./: CMakeLists.txt
src/app/Controller/: Controller.cpp
src/app/Entity/: MembersEntity.cpp
src/app/Listener/: Listener.cpp
src/app/Service/: MembersManageService.cpp  MembersManageService.h
src/app/View/: DisplayView.cpp
sw_design/: golfMembersManager_Design.drawio
